# Parallel-YOLO

./: .gitignore  CMakeLists.txt  README.md  combine_layers.cu  create_standard_data.sh  layers.h  main.sh  requirements.txt  run_tests.sh
include/: README.md  convolution.h  data_utils.h  max_pool.h  mse.h  relu.h  sigmoid.h  softmax.h
layers/: fully_connected.cu  max_pool.cu  relu.c  relu.cu  softmax.cu
layers-old/: combine_layers.cu  convolution.cu  fully_connected.cu  layers.h  relu.cu  softmax.cu  softmax.ipynb
processing/: README.md  combineFourImage.py  combineScript.sh  flatten.c  get_standard_annotations.sh  pText_script.h  pText_script.sh  readFile.c  resize.py
sample/: README.md
sample/labels/: 000004.txt  000006.txt  000008.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000023.txt  000025.txt  000026.txt  000029.txt
scripts/: config.py  create_data.py  create_targets.py  debug.py  infer_targets.py
src/: README.md  model.cu  test.cu
test/: README.md  run_tests.cu
